# scripture-stories

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-test.yml  deploy.yml
backend/: main.py  package.json  pyproject.toml  wrangler.jsonc
docs/: index.html
